--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,7 +29,18 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //图片加载库，用于加载图片
     compile 'com.github.bumptech.glide:glide:3.7.0'
-//    //图片缩放库，用于图片的预览
-//    compile 'com.github.chrisbanes:PhotoView:2.0.0'
-
+    //    //图片缩放库，用于图片的预览
+    //    compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    //网络请求
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    //adapter-rxjava 导入rxjava1.5 与rxjava2 冲突，使用exclude排除对应jar包
+    compile('com.squareup.retrofit2:adapter-rxjava:2.1.0') { exclude(group: 'io.reactivex') }
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    //    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile files('libs/nineoldandroids-2.4.0.jar')
 }
